--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -10,7 +10,7 @@
     <![endif]-->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <title>Vitaland Kids Cafe</title>
 </head>
 <body>
     <div class="container">
@@ -18,7 +18,7 @@
             <header class="col-md-2">
                 <div class="logo">
                     <a href="#">
-                        <img id="logo" src="images/logo.png" alt="拼多多">
+                        <img id="logo" src="images/bigLogo.png" alt="Vitaland">
                     </a>
                 </div>
                 <div class="nav">
@@ -32,22 +32,48 @@
                 </div>
             </header>
             <article class="col-md-7">
-                <div class="news">
+                <div class="news clearfix">
+                    <!-- 清除浮动 clearfix -->
                     <ul>
                         <li> 
-                            <img src="images/3221610325923_.pic_hd.jpg" alt="" width="100%">
+                        <a href="#">
+                            <img src="images/3221610325923_.pic_hd.jpg" alt="">
+                            <p>Kids Cafe</p>
+                        </a>
                         </li>
                         <li>
-                            <img src="images/3231610325924_.pic_hd.jpg" alt="" width="100%">
+                            <a href="#">
+                                <img src="images/3231610325924_.pic_hd.jpg" alt="">
+                                <p>Vitalands kdis cafe in Rhodes shopping centre dsjhdh</p>
+                            </a>
                         </li>
                         <li>
-                            <img src="images/3281610325975_.pic_hd.jpg" alt="" width="100%">
+                            <a href="#">
+                                <img src="images/3281610325975_.pic_hd.jpg" alt="">
+                                <p>Vitalands kdis cafe in Rhodes shopping centre dsjhdh</p>
+                            </a>
                         </li>
-                        <li><img src="images/WeChat Image_20210208103847.jpg" alt="" width="100%"></li>
-                        <li><img src="images/WeChat Image_20210208103812.jpg" alt="" width="100%"></li>
+                        <li><a href="#">
+                            <img src="images/WeChat Image_20210208103812.jpg" alt="">
+                            <p>Vitalands kdis cafe in Rhodes shopping centre dsjhdh</p>
+                        </a>
+                        </li>
+                        <li><a href="#">
+                            <img src="images/WeChat Image_20210208103832.jpg" alt="">
+                            <p>Vitalands kdis cafe in Rhodes shopping centre dsjhdh</p>
+                        </a>
+                        </li>
                     </ul>
                 </div>
-                <div class="publish"></div>
+                
+                <div class="publish">
+                    <div class="row">
+                        <div class="col-sm-9">
+                            <h3>生活馆 关于直接的十个健康知识你知道几个</h3>
+                        </div>
+                        <div class="col-sm-3">wewr</div>
+                    </div>
+                </div>
             </article>
             <aside class="col-md-3">右侧</aside>
         </div>
