--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -180,12 +180,12 @@
                                         Us</strong></h5>
 
                                 <a class="text-light"
-                                    href="https://www.facebook.com/pages/category/Restaurant/vitaland_kids_cafe-104417804975632/"><i
+                                    href="https://www.facebook.com/pages/category/Restaurant/vitaland_kids_cafe-104417804975632/" target="view_window"><i
                                         class="fa fa-facebook-square fa-fw fa-2x"></i></a>
-                                <a class="text-light" href="https://www.instagram.com/vitaland_kids_cafe/"><i
+                                <a class="text-light" href="https://www.instagram.com/vitaland_kids_cafe/" target="view_window"><i
                                         class="fa fa-instagram fa-fw fa-2x"></i></a>
                                 <a class="text-light" href="javascript:void(0);" onclick="show()"><i class="fa fa-wechat fa-fw fa-2x"></i></a>
-                                <a class="text-light" href="https://www.xiaohongshu.com/user/profile/5c60b7e7000000001d038f2c"><i class="fa fa-book fa-fw fa-2x"></i></a>
+                                <a class="text-light" href="https://www.xiaohongshu.com/user/profile/5c60b7e7000000001d038f2c" target="view_window"><i class="fa fa-book fa-fw fa-2x"></i></a>
                             </div>
                             <div class="card-body text-center">
                                 <h5 class="card-title text-white display-4" style="font-size:30px"><strong>Trading
