--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -1,12 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--[if lt IE 9]>
+      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+    <![endif]-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Sriracha&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/commonstyle.css">
+    <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <title>Vitaland Kids Cafe</title>
 </head>
+
 <body>
-    
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top border-bottom shadow-md">
+        <div class="container">
+            <!-- <a class="navbar-left 1" href="index.html">
+                <img src="images/castle.png" alt="Castle">
+            </a> -->
+            <a class="navbar-left" href="index.html">
+
+                <img src="images/smallLogo.png" alt="Vitaland Kids Cafe">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Visite</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Cafe&Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Party</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacts.html">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div id="article" class="container-fluid">
+        <div class="row">
+            <div>Play and Fun</div>
+            
+        </div>
+        <h1 class="mt-4">Logo Nav by Start Bootstrap</h1>
+        <p>
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo
+            eight of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
+            feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
+            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
+            feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
+            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
+            feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
+            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
+            feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
+            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
+            feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
+            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
+            feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
+            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
+            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
+            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
+            feature in Bootstrap 4! Make sure to set the width and
+            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.</p>
+    </div>
+    <!-- /.container -->
+
+    <footer>
+        <div class="jumbotron jumbotron-fluid bg-secondary p-4 mt-5 mb-0">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 cizgi">
+                        <div class="card bg-secondary border-0">
+                            <div class="card-body text-light text-center">
+                                <img src="images/smallLogo.png" alt="" width="230px" height="auto"
+                                    max-width="66%"><br><br>
+
+                                <p class="d-inline lead">A vibrant indoor space for kids to play and learn. Meet new
+                                    friends or explore on their own.<br>
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 cizgi">
+                        <div class="card bg-secondary border-0">
+                            <div class="card-body text-center">
+                                <h5 class="card-title text-white display-4" style="font-size:30px"><strong>Contact
+                                        Us</strong>
+                                </h5>
+                                <a class="text-light d-block lead" style="margin-left: -20px" href="#"><i
+                                        class="fa fa-phone mr-2"></i>0436 292 626</a>
+                                <a class="text-light d-block lead" href="#"><i
+                                        class="fa fa-envelope mr-2"></i>admin@localhost.com</a>
+                                <a class="text-light d-block lead"
+                                    href="https://www.google.com/maps/place/Vitaland+Kids+Cafe/@-33.8348117,151.0830516,17z/data=!3m1!4b1!4m5!3m4!1s0x6b12a539952262e5:0x449f6b0a17a63c5b!8m2!3d-33.8348117!4d151.0852403"><i
+                                        class="fa fa-map mr-2"></i>Shop26A Rhodes Waterside, 1 Rider Blvd, Rhodes
+                                    NSW 2138</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+
+                        <div class="card bg-secondary border-0">
+                            <div class="card-body text-center" style="padding-bottom: 0%;">
+                                <h5 class="card-title text-white display-4" style="font-size:30px;"><strong>Follow
+                                        Us</strong></h5>
+
+                                <a class="text-light"
+                                    href="https://www.facebook.com/pages/category/Restaurant/vitaland_kids_cafe-104417804975632/"
+                                    target="view_window"><i class="fa fa-facebook-square fa-fw fa-2x"></i></a>
+                                <a class="text-light" href="https://www.instagram.com/vitaland_kids_cafe/"
+                                    target="view_window"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
+                                <a class="text-light-wechat"><i class="fa fa-wechat fa-fw fa-2x"></i></a>
+                                <a class="text-light"
+                                    href="https://www.xiaohongshu.com/user/profile/5c60b7e7000000001d038f2c"
+                                    target="view_window"><i class="fa fa-book fa-fw fa-2x"></i></a>
+                            </div>
+                            <div class="code_wrap">
+                                <ul class="code">
+                                    <li><img class="wechat" src="images/qrcode.png" alt="" width="100px" height="100px"></li>
+                                </ul>
+                            </div>
+                            <div class="card-body text-center">
+                                <h5 class="card-title text-white display-4" style="font-size:30px"><strong>Trading
+                                        Hours</strong></h5>
+                                <p class="card-title text-white display-4" style="font-size:18px">Mon-Sun...9am - 5pm
+                                </p>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+
+                </div>
+
+                <div class="copyright">
+                    <p class="text-center">Copyright © 2021 Vitaland Kids Cafe. All rights reserved</p>
+                </div>
+            </div>
+
+        </div>
+
+    </footer>
+    <script>
+        $(".text-light-wechat").hover(function () {
+            $(".wechat").fadeIn(500);            
+            $(".code_wrap").css("z-index", 200);
+        }, function () {
+            $(".wechat").fadeOut(0);
+            $(".code_wrap").css("z-index", 50);
+        });
+        $(".wechat").hover(function () {
+            $(this).fadeIn(0);
+            $(".code_wrap").css("z-index", 200);
+        }, function () {
+            $(this).fadeOut(500);
+            $(".code_wrap").css("z-index", 50);
+        });
+    </script>
 </body>
+
 </html>
