--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -165,8 +165,7 @@
                                 </h5>
                                 <a class="text-light d-block lead" style="margin-left: -20px" href="#"><i
                                         class="fa fa-phone mr-2"></i>0436 292 626</a>
-                                <a class="text-light d-block lead" href="#"><i class="fa fa-envelope mr-2"></i>Rain:
-                                    Vitalandkids@gmail.com
+                                <a class="text-light d-block lead" href="#"><i class="fa fa-envelope mr-2"></i>Vitalandkids@gmail.com
                                 </a>
                                 <a class="text-light d-block lead"
                                     href="https://www.google.com/maps/place/Vitaland+Kids+Cafe/@-33.8348117,151.0830516,17z/data=!3m1!4b1!4m5!3m4!1s0x6b12a539952262e5:0x449f6b0a17a63c5b!8m2!3d-33.8348117!4d151.0852403"><i
