--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -33,8 +33,7 @@
 
                 <img src="images/smallLogo.png" alt="Vitaland Kids Cafe">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -65,13 +64,25 @@
     </nav>
 
     <!-- Page Content -->
-    <div id="article" class="container-fluid">
-        <div class="row">
-            <div class="text-center">Play and Fun</div>
-            <h1 class="mt-4">Logo Nav by Start Bootstrap</h1>
+    <div class="container-fluid">
+        <div id="contacts">
+            <div style="width: 150px">
+                <h1>
+                    <p class="text-center text-white">Contacts</p>
+                </h1>
+            </div>
         </div>
-        
-        
+        <div class="row">
+            <a class="col-sm-12 col-md-4 infoboard" data-title="VitalandKids@gmail.com">
+                email
+            </a>
+            <a class="col-sm-12 col-md-4 infoboard" data-title="Telephone:0436292626">
+
+            </a>
+            <a class="col-sm-12 col-md-4 infoboard" data-title="VitalandKis@gmail.com">
+
+            </a>
+        </div>
     </div>
 
     <!-- footer -->
@@ -82,11 +93,9 @@
                     <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 cizgi">
                         <div class="card bg-secondary border-0">
                             <div class="card-body text-light text-center">
-                                <img src="images/smallLogo.png" alt="" width="230px" height="auto"
-                                    max-width="66%"><br><br>
+                                <img src="images/smallLogo.png" alt="" width="230px" height="auto" max-width="66%"><br><br>
 
-                                <p class="d-inline lead">A vibrant indoor space for kids to play and learn. Meet new
-                                    friends or explore on their own.<br>
+                                <p class="d-inline lead">A vibrant indoor space for kids to play and learn. Meet new friends or explore on their own.<br>
                                 </p>
 
                             </div>
@@ -101,11 +110,10 @@
                                 </h5>
                                 <a class="text-light d-block lead" style="margin-left: -20px" href="#"><i
                                         class="fa fa-phone mr-2"></i>0436 292 626</a>
-                                <a class="text-light d-block lead" href="#"><i class="fa fa-envelope mr-2"></i>Rain:
-                                    Vitalandkids@gmail.com
+                                <a class="text-light d-block lead" href="#"><i
+                                        class="fa fa-envelope mr-2"></i>Vitalandkids@gmail.com
                                 </a>
-                                <a class="text-light d-block lead"
-                                    href="https://www.google.com/maps/place/Vitaland+Kids+Cafe/@-33.8348117,151.0830516,17z/data=!3m1!4b1!4m5!3m4!1s0x6b12a539952262e5:0x449f6b0a17a63c5b!8m2!3d-33.8348117!4d151.0852403"><i
+                                <a class="text-light d-block lead" href="https://www.google.com/maps/place/Vitaland+Kids+Cafe/@-33.8348117,151.0830516,17z/data=!3m1!4b1!4m5!3m4!1s0x6b12a539952262e5:0x449f6b0a17a63c5b!8m2!3d-33.8348117!4d151.0852403"><i
                                         class="fa fa-map mr-2"></i>Shop26A Rhodes Waterside, 1 Rider Blvd, Rhodes
                                     NSW 2138</a>
                             </div>
@@ -119,15 +127,10 @@
                                 <h5 class="card-title text-white display-4" style="font-size:30px;"><strong>Follow
                                         Us</strong></h5>
 
-                                <a class="text-light"
-                                    href="https://www.facebook.com/pages/category/Restaurant/vitaland_kids_cafe-104417804975632/"
-                                    target="view_window"><i class="fa fa-facebook-square fa-fw fa-2x"></i></a>
-                                <a class="text-light" href="https://www.instagram.com/vitaland_kids_cafe/"
-                                    target="view_window"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
+                                <a class="text-light" href="https://www.facebook.com/pages/category/Restaurant/vitaland_kids_cafe-104417804975632/" target="view_window"><i class="fa fa-facebook-square fa-fw fa-2x"></i></a>
+                                <a class="text-light" href="https://www.instagram.com/vitaland_kids_cafe/" target="view_window"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
                                 <a class="text-light-wechat"><i class="fa fa-wechat fa-fw fa-2x"></i></a>
-                                <a class="text-light"
-                                    href="https://www.xiaohongshu.com/user/profile/5c60b7e7000000001d038f2c"
-                                    target="view_window"><i class="fa fa-book fa-fw fa-2x"></i></a>
+                                <a class="text-light" href="https://www.xiaohongshu.com/user/profile/5c60b7e7000000001d038f2c" target="view_window"><i class="fa fa-book fa-fw fa-2x"></i></a>
                             </div>
                             <div class="code_wrap">
                                 <ul class="code">
@@ -158,20 +161,61 @@
 
     </footer>
     <script>
-        $(".text-light-wechat").hover(function () {
+        $(".text-light-wechat").hover(function() {
             $(".wechat").fadeIn(500);
             $(".code_wrap").css("z-index", 200);
-        }, function () {
+        }, function() {
             $(".wechat").fadeOut(0);
             $(".code_wrap").css("z-index", 50);
         });
-        $(".wechat").hover(function () {
+        $(".wechat").hover(function() {
             $(this).fadeIn(0);
             $(".code_wrap").css("z-index", 200);
-        }, function () {
+        }, function() {
             $(this).fadeOut(500);
             $(".code_wrap").css("z-index", 50);
         });
+    </script>
+    <script>
+        const docStyle = document.documentElement.style
+        const aElem = document.querySelector('a.infoboard')
+        const boundingClientRect = aElem.getBoundingClientRect()
+
+        aElem.onmousemove = function(e) {
+
+            const x = e.clientX - boundingClientRect.left
+            const y = e.clientY - boundingClientRect.top
+
+            const xc = boundingClientRect.width / 2
+            const yc = boundingClientRect.height / 2
+
+            const dx = x - xc
+            const dy = y - yc
+
+            docStyle.setProperty('--rx', `${dy / -1}deg`)
+            docStyle.setProperty('--ry', `${dx / 10}deg`)
+
+        }
+
+        aElem.onmouseleave = function(e) {
+
+            docStyle.setProperty('--ty', '0')
+            docStyle.setProperty('--rx', '0')
+            docStyle.setProperty('--ry', '0')
+
+        }
+
+        aElem.onmousedown = function(e) {
+
+            docStyle.setProperty('--tz', '-25px')
+
+        }
+
+        document.body.onmouseup = function(e) {
+
+            docStyle.setProperty('--tz', '-12px')
+
+        }
     </script>
 </body>
 
