--- a/bootstrap学习/index.html
+++ b/bootstrap学习/index.html
@@ -66,76 +66,36 @@
 
     <!-- Page Content -->
     <div id="article" class="container-fluid">
-        <div class="row">
-            <div class="text-center">Play and Fun</div>
-
+        <div class="wrapper loading">
+            <div class="destination folded">
+                <h1>Iceland</h1>
+                <hr />
+                <p class="caption">Fire and ice</p>
+                <button>Discover</button><img src="https://source.unsplash.com/ABtmE3jhaPQ/800x600"
+                    alt="Beautiful Iceland" />
+            </div>
+            <div class="destination folded">
+                <h1>Canada</h1>
+                <hr />
+                <p class="caption">Genuine wilderness</p>
+                <button>Discover</button><img src="https://source.unsplash.com/DlkF4-dbCOU/800x600"
+                    alt="Beautiful Canada" />
+            </div>
+            <div class="destination folded">
+                <h1>Norway</h1>
+                <hr />
+                <p class="caption">Arctic gateway</p>
+                <button>Discover</button><img src="https://source.unsplash.com/6f_ANCcbj3o/800x600"
+                    alt="Beautiful Norway" />
+            </div>
+            <div class="destination folded">
+                <h1>Greenland</h1>
+                <hr />
+                <p class="caption">Epic landscapes</p>
+                <button>Discover</button><img src="https://source.unsplash.com/iWIDgeUbskQ/800x600"
+                    alt="Beautiful Greenland" />
+            </div>
         </div>
-        <h1 class="mt-4">Logo Nav by Start Bootstrap</h1>
-        <p>
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo
-            eight of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
-            feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
-            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
-            feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
-            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
-            feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
-            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
-            feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
-            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
-            feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
-            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
-            feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logoeight of the
-            logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.The logo in
-            the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and
-            with CSS. For best results, use an SVG image as your logo.The logo in the navbar is now a default Bootstrap
-            feature in Bootstrap 4! Make sure to set the width and
-            height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.</p>
     </div>
 
     <!-- footer -->
@@ -165,7 +125,8 @@
                                 </h5>
                                 <a class="text-light d-block lead" style="margin-left: -20px" href="#"><i
                                         class="fa fa-phone mr-2"></i>0436 292 626</a>
-                                <a class="text-light d-block lead" href="#"><i class="fa fa-envelope mr-2"></i>Vitalandkids@gmail.com
+                                <a class="text-light d-block lead" href="#"><i
+                                        class="fa fa-envelope mr-2"></i>Vitalandkids@gmail.com
                                 </a>
                                 <a class="text-light d-block lead"
                                     href="https://www.google.com/maps/place/Vitaland+Kids+Cafe/@-33.8348117,151.0830516,17z/data=!3m1!4b1!4m5!3m4!1s0x6b12a539952262e5:0x449f6b0a17a63c5b!8m2!3d-33.8348117!4d151.0852403"><i
