--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -96,8 +96,8 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Messege"></textarea>
                     </div>
                     <br>
-                    <div style="text-align: center;">
-                        <button type="submit" class="btn btn-primary col-md-3 col-sm-2" style="font-family: 'Sriracha', cursive;">Send</button>
+                    <div>
+                        <button type="submit" class="btn1 btn--stripe btn--radius col-sm-3" style="font-family: 'Sriracha', cursive;">Send</button>
                     </div>                
                     <br><br>
                 </form>
