--- a/bootstrap学习/visit.html
+++ b/bootstrap学习/visit.html
@@ -69,6 +69,17 @@
         <div id="contacts">            
         <div style="width: 150px"><h1><p class="text-center text-white">Visit</p></h1></div>
         </div>
+        <div class="container" style="margin-top: 30px;">
+            <div style="text-align:center;font-family: 'Sriracha', cursive; background-color:#fcf9f4;"><h1><br>Service Information</h1><br></div>
+            <div id="imgframe" class="col-md-12" style="text-align: center; margin-top: 20px;font-family: 'Sriracha', cursive;font-size: 25px;">
+                <button class="btn1 btn--stripe btn--radius col-sm-3" onclick="ExchangePic('price')">Entry Price</button>
+                <button class="btn1 btn--stripe btn--radius col-sm-3" onclick="ExchangePic('rules')">Rules of Play</button>
+                <button class="btn1 btn--stripe btn--radius col-sm-3" onclick="ExchangePic('party')">Party Package</button>                
+            </div>
+            <div>
+                <img class="img-fluid" src="images/price.jpg" alt="Price">
+            </div>
+        </div>
     </div>
 
     <!-- footer -->
@@ -168,6 +179,22 @@
             $(this).fadeOut(500);
             $(".code_wrap").css("z-index", 50);
         });
+    </script>
+    <script>
+        function ExchangePic(i) {
+            const pic = document.querySelector('img.img-fluid');
+            pic.src = "images/" + i + ".jpg";
+            const div_select = document.getElementById("imgframe")
+            const  remark = document.createElement("p")
+            if (i == 'party') {                
+                remark.innerHTML = "Please go to Party Tab to find more details about our party package..."
+                div_select.appendChild(remark)
+                remark.setAttribute("id", "ptag")
+            }else{
+                const child = document.getElementById("ptag")
+                div_select.removeChild(child)
+            }
+        }
     </script>
 </body>
 
