--- a/bootstrap学习/party.html
+++ b/bootstrap学习/party.html
@@ -69,6 +69,15 @@
         <div id="contacts">            
         <div style="width: 150px"><h1><p class="text-center text-white">Party</p></h1></div>
         </div>
+        <div>
+            <img class="img-fluid" src="images/vitaparty1.png" alt="">
+            <img class="img-fluid" src="images/vitaparty2.png" alt="">
+            <img class="img-fluid" src="images/vitaparty3.png" alt="">
+            <img class="img-fluid" src="images/vitaparty4.png" alt="">
+            <img class="img-fluid" src="images/vitaparty5.png" alt="">
+            <img class="img-fluid" src="images/vitaparty6.png" alt="">
+            <img class="img-fluid" src="images/vitaparty7.png" alt="">
+        </div>
     </div>
 
     <!-- footer -->
