--- a/bootstrap学习/contacts.html
+++ b/bootstrap学习/contacts.html
@@ -17,6 +17,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Sriracha&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/commonstyle.css">
+    <link rel="stylesheet" href="css/baguetteBox.min.css">
+    <link rel="stylesheet" href="css/gallery-grid.css">
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <title>Vitaland Kids Cafe</title>
@@ -74,13 +76,13 @@
             </div>
         </div>
         <div class="row" style="margin-top:60px; margin-bottom: 60px; margin-left: 40px; margin-right: 40px;">
-            <a class="col-sm-12 col-md-4 infoboard" title="Email:           Vitalandkids@gmail.com" onmouseover="i=0;console.log(i); wave(i)"></a>
-            <a class="col-sm-12 col-md-4 infoboard" title="Telephone: 0436292626" onmouseover="i=1;console.log(i); wave(i)"></a>
+            <a class="col-sm-12 col-md-4 infoboard" title="Email:           Vitalandkids@gmail.com" onmouseover="i=0; wave(i)"></a>
+            <a class="col-sm-12 col-md-4 infoboard" title="Telephone: 0436292626" onmouseover="i=1; wave(i)"></a>
             <a class="col-sm-12 col-md-4 infoboard"
                 title="Address: Shop26A Rhodes Waterside, 1 Rider Blvd, Rhodes NSW 2138"
-                onmouseover="i=2; console.log(i); wave(i)"></a>
+                onmouseover="i=2; wave(i)"></a>
         </div>
-        <div class="row" style="display:-webkit-flex;justify-content:center; background-color:#fcf9f4;">
+        <div class="container gallery-container" style="display:-webkit-flex;justify-content:center; background-color:#fcf9f4;">
             <div class="col-sm-12">
                 <form class="col-lg-12">
                     <br><br>
@@ -96,7 +98,7 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Messege"></textarea>
                     </div>
                     <br>
-                    <div>
+                    <div style="text-align: center;">
                         <button type="submit" class="btn1 btn--stripe btn--radius col-sm-3" style="font-family: 'Sriracha', cursive;">Send</button>
                     </div>                
                     <br><br>
