--- a/bootstrap学习/party.html
+++ b/bootstrap学习/party.html
@@ -162,22 +162,7 @@
         </div>
 
     </footer>
-    <script>
-        $(".text-light-wechat").hover(function () {
-            $(".wechat").fadeIn(500);
-            $(".code_wrap").css("z-index", 200);
-        }, function () {
-            $(".wechat").fadeOut(0);
-            $(".code_wrap").css("z-index", 50);
-        });
-        $(".wechat").hover(function () {
-            $(this).fadeIn(0);
-            $(".code_wrap").css("z-index", 200);
-        }, function () {
-            $(this).fadeOut(500);
-            $(".code_wrap").css("z-index", 50);
-        });
-    </script>
+    <script type="text/javascript" src="js/wechat_fade.js"></script>
 </body>
 
 </html>
